2005-04-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gyrus.

2005-04-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed system-tools-backends.
	This module has been moved to freedesktop.org.

2005-04-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: atk has been branched.

2005-04-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added beagle.

2005-04-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: sound-juicer has been branched.

2005-04-04  Adam Weinberger  <adamw@gnome.org>

	* translation-status.xml: gnome-doc-utils has branched.

2005-04-01  Abel Cheung  <maddog@linuxhall.org>

	* translation-status.xml: Remove gnome-chess (no development
	activity for 2 years, last release is 4 yrs ago)

2005-03-30  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added bakery.

2005-03-29  Frank Arnold  <farnold@cvs.gnome.org>

	* translation-status.xml: gtkhtml HEAD uses "gtkhtml-3.8.pot" now.

2005-03-29  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: glimmer has been removed (#123863).

2005-03-28  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-control-center,
	gnome-applets and libgnome have been branched.

2005-03-25  Adam Weinberger  <adamw@gnome.org>

	* translation-status.xml: Change gimp over to the HEAD branch.

2005-03-25  Adam Weinberger  <adamw@gnome.org>

	* translation-status.xml: Remove gnome-2.8 modules, and create
	  gnome-2.12 modules. Additionally, the file has been passed
	  through xmllint --format, so it should now be impeccably
	  indented. It would most likely behoove us to maintain its
	  structure with an xmllint --format before checkin.

2005-03-25  Adam Weinberger  <adamw@gnome.org>

	* translation-status.xml: gnome-keyring-manager has branched.

2005-03-24  Adam Weinberger  <adamw@gnome.org>

	* translation-status.xml: libbonoboui has been branched.
