@@ -542,6 +542,17 @@
       </component>
     </version>
   </module>
+  <module name="fast-user-switch-applet">
+    <version release="HEAD">
+      <component name="fast-user-switch-applet" dir="fast-user-switch-applet" group="extras">
+        <podir dir="po"/>
+        <potname name="fast-user-switch-applet.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="file-roller">
     <version release="gnome-2.10">
       <component name="file-roller" dir="file-roller" group="desktop">
