@@ -1,3 +1,7 @@
+2005-04-13  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* translation-status.xml: Added fast-user-switching-applet.
+
 2005-04-09  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Added gyrus.
